--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@tailwindcss/line-clamp": "^0.4.2",
         "autoprefixer": "^10.4.12",
+        "nvm": "^0.0.4",
         "sass": "^1.55.0"
     }
 }
