--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
             context: .
             dockerfile: docker/nginx/Dockerfile
         container_name: cutcode_nginx
+        environment:
+            - DOCROOT
         volumes:
             - ./:/var/www/cutcode-shop-docker
         ports:
@@ -18,6 +20,9 @@ services:
             context: .
             dockerfile: docker/php-fpm/Dockerfile
         container_name: cutcode_php-fpm
+        working_dir: /var/www/cutcode-shop-docker
+        environment:
+            - DOCROOT=public
         volumes:
             - ./:/var/www/cutcode-shop-docker
         links:
@@ -32,5 +37,9 @@ services:
             - MYSQL_DATABASE=cutcode_shop
         volumes:
             - "./docker/volume/mysql:/var/lib/mysql"
-
-
+    mailhog:
+        image: mailhog/mailhog:latest
+        container_name: cutcode_mailhog
+        ports:
+            - "8003:1025"
+            - "8100:8025"
